@@ -1,0 +1,1 @@
+SELECT TRANSFORM(*) USING 'cat' AS (key DATE) FROM src;
